--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-otp-entry": "^1.8.4",
+    "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-size-matters": "^0.4.2",
