--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "expo": "~53.0.9",
+    "expo-av": "~15.1.7",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
     "expo-contacts": "^14.2.4",
+    "expo-document-picker": "~13.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
-    "expo-image-picker": "^16.1.4",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.6",
     "expo-secure-store": "^14.2.3",
@@ -38,7 +40,9 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-gifted-chat": "^2.8.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-otp-entry": "^1.8.4",
     "react-native-reanimated": "^3.18.0",
